--- a/docs/01.프로젝트개요.md
+++ b/docs/01.프로젝트개요.md
@@ -63,6 +63,10 @@ dstone-batch-server/
 	
 ### 5-2. Application 등록
 	- Application 메뉴 에서 상단 [Add Application(s)] 클릭
+	- Name : dstone-batch
+	- Type : task
+	- Spring Boot Version : Spring Boot 2x
+	- URI : file:////workshop/dstone-batch/target/dstone-batch-0.0.1-SNAPSHOT.jar
 <img src="resources/images/dataflow-01-reg-app.png" alt="Dataflow App 등록" width="700" height="400" />
 
 ### 5-3. Job(Task) 등록
