--- a/docs/01.프로젝트개요.md
+++ b/docs/01.프로젝트개요.md
@@ -87,7 +87,7 @@ dstone-batch-server/
 
 ### 5-7. Job(Task) 실행 Step03
 	< Deployment Property 세팅 >
-	- javaOpts=-Dspring.profiles.active=dev
+	- javaOpts : -Dspring.profiles.active=dev
 <img src="resources/images/dataflow-04-run-task-03.png" alt="Deployment Property 세팅" width="700" height="400" />
 
 ### 5-8. Job(Task) 실행 Step04
