--- a/docs/01.프로젝트개요.md
+++ b/docs/01.프로젝트개요.md
@@ -72,7 +72,9 @@ dstone-batch-server/
 ### 5-3. Job(Task) 등록
 	- 배치프레임웍(dstone-batch)에서 net.dstone.batch.common.runner.ScdfTaskRunner 를 이용해서 Task 자동등록.
 <img src="resources/images/dataflow-02-reg-tasks-by-app.png" alt="Dataflow Task 목록 등록" width="700" height="400" />
-
+	- 혹은 dstone-batch 서버가 올라가 있을 경우 자동등록기능을 사용.
+	  예)
+	  http://localhost:6081/batch/regtasks
 ### 5-4. Job(Task) 목록 조회
 	- 등록된 Task 목록 조회.
 <img src="resources/images/dataflow-03-list-tasks.png" alt="등록된 Task 목록 조회" width="700" height="400" />
