--- a/docs/01.프로젝트개요.md
+++ b/docs/01.프로젝트개요.md
@@ -110,8 +110,14 @@ dstone-batch-server/
 <img src="resources/images/dataflow-04-run-task-06.png" alt="로그 확인" width="700" height="400" />
 
 
-## 6. Docker 배포
-
-`docs/docker` 디렉토리의 파일들은 이 프로젝트를 Docker 컨테이너 환경에서 실행하기 위한ものです. `01.dstone-batch-server-docker.yml` 파일은 Docker Compose를 사용하여 Dataflow와 Skipper 서버를 서비스로 정의하고 한번에 실행할 수 있도록 지원합니다. 이를 통해 개발 및 운영 환경의 일관성을 유지하고 배포를 간소화할 수 있습니다.
-
-
+## <span style="color:red;">6. 제약</span>
+```txt
+- dataflow(SCDF)의 경우 아래의 테이블이 소문자로 생성됨. 따라서 기존에 테이블이 이미 대문자로 생성되어 있다면 해당 테이블은 사용되지 않음.
+  app_registration
+  audit_records
+  hibernate_sequence
+  stream_definitions
+  task_definitions
+  task_deployment
+- 2025-12-21 현재로서는 SCDF는 테이블명을 대문자로 “핸들링(변경/강제)”할 수 있는 공식 방법이 없음.
+```
