--- a/docs/01.프로젝트개요(dstone-batch-server).md
+++ b/docs/01.프로젝트개요(dstone-batch-server).md
@@ -2,13 +2,13 @@
 
 # dstone-batch-server 프로젝트 설명
 
-## 1. 개요
+## <span style="color:green;">1. 개요</span>
 
 이 프로젝트는 Spring Cloud Dataflow와 Spring Cloud Skipper를 사용하여 데이터 처리 파이프라인과 배치(Batch) 애플리케이션을 구축, 배포 및 관리하기 위한 서버 환경을 제공합니다. `dstone-batch-server`라는 이름에서 알 수 있듯이, 대량의 데이터를 처리하는 배치 작업을 중앙에서 관리하고 모니터링하는 것을 주 목적으로 합니다.
 
 프로젝트는 소스 코드를 직접 빌드하는 형태가 아니라, 이미 빌드된 Spring Cloud Dataflow Server와 Skipper Server를 포함하여 실행 환경을 구성하는 데 중점을 둡니다.
 
-## 2. 주요 구성 요소
+## <span style="color:green;">2. 주요 구성 요소</span>
 
 - **Spring Cloud Dataflow Server:**
   - 배치 및 스트림 애플리케이션의 파이프라인을 생성, 배포, 관리하는 핵심 서버입니다.
@@ -20,7 +20,7 @@
   - Dataflow와 함께 작동하여 배치 애플리케이션의 버전 관리, 업그레이드, 롤백 등의 기능을 수행합니다.
   - `modules/skipper` 디렉토리에 실행 가능한 서버 파일이 위치합니다.
 
-## 3. 디렉토리 구조
+## <span style="color:green;">3. 디렉토리 구조</span>
 
 ```
 dstone-batch-server/
@@ -48,7 +48,7 @@ dstone-batch-server/
 └───target/                 # (현재 비어있음) Maven/Gradle 빌드 시 결과물이 생성되는 폴더
 ```
 
-## 4. 실행 흐름
+## <span style="color:green;">4. 실행 흐름</span>
 
 1.  **환경 설정**: `conf/dataflow-server.yml` 파일에 데이터베이스 접속 정보, Skipper 서버 주소 등 운영에 필요한 설정을 구성합니다.
 2.  **서버 실행**:
@@ -58,7 +58,7 @@ dstone-batch-server/
     - 웹 브라우저를 통해 Dataflow UI에 접속합니다. (기본 포트: 9393)
     - UI 또는 REST API를 사용하여 등록된 배치 애플리케이션으로 태스크를 생성하고 실행합니다.
 
-## 5. Batch Applicaiton 등록
+## <span style="color:green;">5. Batch Applicaiton 등록</span>
 
 ### 5-1. 대시보드 접속
 	- http://localhost:9393/dashboard
@@ -108,7 +108,6 @@ dstone-batch-server/
 ### 5-10. Job(Task) 실행 Step06
 	- 로그 내용 확인
 <img src="resources/images/dataflow-04-run-task-06.png" alt="로그 확인" width="700" height="400" />
-
 
 ## <span style="color:red;">6. 제약</span>
 ```txt
